--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,4 @@
-
-
+/* Обнуляющие стили */
 html{
   box-sizing: border-box;
 }
@@ -40,20 +39,34 @@ body{
   font-size: 22px;
   font-weight: 400;
 }
-
+/* Переменные */
 :root{
-  --black: #2C3038; /*var(--black, #2C3038); */
-  --dark-blue: #051534; /*var(--dark-blue, #051534); */
-  --light-blue:#0F8FF9; /*var(--light-blue, #0F8FF9); */
-  --green:#00C064; /*var(--green, #00C064); */
-  --white:#fff; /*var(--white, #fff); */
-  --background:#FBFBFB; /*var(--background, #FBFBFB); */
+  --black: #2C3038; 
+  --dark-blue: #051534; 
+  --light-blue:#0F8FF9; 
+  --green:#00C064; 
+  --white:#fff; 
+  --background:#FBFBFB; 
+}
+/* Стандартные стили */
+a:hover{
+  transition: 0.5s;
+
+  border-bottom: 1px solid;
+  border-bottom-color: rgba(15, 122, 252, 0.2);
+}
+.removing-link-styles a:hover{
+  transition:0;
+
+  border:none;
 }
 .button{
   display: inline-flex;
   align-items: center;
 
   padding: 12px 20px;
+
+  transition: 0.5s;
 
   border: 1px solid rgba(5, 21, 52, 0.30);
   border-radius: 4px;
@@ -63,7 +76,16 @@ body{
   font-size: 18px;
   line-height: 100%;
 }
+.button:hover{
+  transform: translate(0,-3px);
 
+  box-shadow: 0 10px 30px 0 var(--white, #fff);;
+}
+.button:active {
+  transition: 0.5s;
+
+  background: var(--black, #2C3038);
+}
 .h2 { 
   letter-spacing: -0.225px;
 
@@ -71,7 +93,10 @@ body{
   font-weight: 600;
   line-height: 110%;
 }
-
+.h3{
+  font-size: 16px;
+  font-weight: 500;
+}
 .blok {
   display: flex;
   flex-direction: column;
@@ -82,26 +107,25 @@ body{
   font-size: 22px;
   line-height: 150%; 
 }
-
 .paragraph{
   text-align: center;
 
   font-size: 22px;
   line-height: 150%; 
 }
-
 .standart-module-flex{
   display: flex;
   gap: 80px;
 }
-
 .standard-container{
   max-width: 1140px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
-/* Стили шапки страницы */
-.menu {
+
+  /* Стили шапки страницы */
+.header {
   padding: 17px 30px;
 
   color: var(--black, #2C3038);
@@ -114,7 +138,8 @@ body{
   flex-direction: row
 }
 .menu-logo {
-  margin-right: 102px;
+  margin-right: auto;
+  padding-right: 10px;
 }
 .menu__list {
   display: flex;
@@ -125,7 +150,12 @@ body{
   font-size: 18px;
   line-height: 110%; 
 }
-
+.menu__list a{
+  color: var(--black);
+}
+.menu__list a:active{
+  color: var(--green);
+}
 .button-conteiner {
   display: flex;
   align-items: center;
@@ -137,6 +167,7 @@ body{
   border-radius: 50%;
 }
 .demo {
+  margin-left: 10px;
   padding: 10px 16px;
 
   border: none;
@@ -150,8 +181,69 @@ body{
   background-color: var(--light-blue, #0F8FF9);
 }
 
-/* Стили блока "Бланс" */
+  /* Стили меню бургер */
+.burger {
+  position: relative;
 
+  display: none;
+
+  width: 30px;
+  height: 20px;
+  padding: 0;
+
+  cursor: pointer;
+
+  border: none;
+  background-color: transparent;
+}
+.burger__line {
+  position: absolute;
+  top: 50%;
+  left: 0;
+
+  width: 100%;
+  height: 2px;
+
+  transition: opacity 0.3s ease-in-out;
+  transform: translateY(-50%);
+
+  background-color: var(--black);
+}
+.burger::before,
+.burger::after {
+  position: absolute;
+  left: 0;
+
+  width: 100%;
+  height: 2px;
+
+  content: "";
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out;
+
+  background-color: var(--black);
+}
+.burger::before {
+  top: 0;
+}
+.burger::after {
+  bottom: 0;
+}
+.burger--active .burger__line {
+  opacity: 0;
+}
+.burger--active::before {
+  top: 50%;
+
+  transform: rotate(45deg);
+}
+.burger--active::after {
+  top: 50%;
+  bottom: auto;
+
+  transform: rotate(-45deg);
+}
+
+  /* Стили блока "Бланс" */
 .balance {
   margin-bottom: 228px;
   padding-top: 150px;
@@ -181,7 +273,6 @@ body{
 
   line-height: 150%; 
 }
-
 .button__balance {
   margin-bottom: 70px;
   padding: 18px 28px;
@@ -193,11 +284,14 @@ body{
   font-size: 24px;
   line-height: 100%; 
 }
+.middle{
+  display: none;
+}
+.mobile{
+  display: none;
+}
 
-
-/* Стили блока "Баланс — главный отчет собственника" */
-
-
+  /* Стили блока "Баланс — главный отчет собственника" */
 .balance-determination__flex {
   display: flex;
   gap: 40px;
@@ -209,16 +303,19 @@ body{
   margin-top: -44px;
 }
 .balance-determination__description {
-  min-width: 900px;
+  max-width: 900px;
+  margin: 0 auto; 
+
+  text-align: center;
 
   font-size: 32px;
-  line-height: 150%; 
+  line-height: 150%;
 }
 .balance-determination__description strong{
   font-weight: 600;
 }
 
-/* Стили блока "Получите полную картину финансов компании" */
+  /* Стили блока "Получите полную картину финансов компании" */
 .financial-vision {
   margin-bottom: 200px;
 }
@@ -226,7 +323,7 @@ body{
   padding-top: 92px;
 }
 
-/* Стили блока "Оперативно оценивайте здоровье бизнеса" */
+  /* Стили блока "Оперативно оценивайте здоровье бизнеса" */
 .business-health{
   margin-bottom: 200px;
 }
@@ -237,7 +334,7 @@ body{
   padding-top: 60px;
 }
 
-/* Стили блока "Построить отчет поможет мастер сборки баланса 🧙‍♂️" */
+  /* Стили блока "Построить отчет поможет мастер сборки баланса 🧙‍♂️" */
 .blok-video {
   margin-bottom: 206px;
 }
@@ -257,19 +354,38 @@ body{
   text-align: center;
 }
 .conteiner-for-video {
+  position: relative;
+  aspect-ratio: 4 / 3;
+
   max-width: 950px;
+  max-height: 590px;
   margin: 0 auto;
   padding-bottom: 10px;
-
-  border-radius: 15px;
-  background-color: rgb(244,244,244);
 }
 .blok-video__video{
-  max-width: 946px;
-  max-height: 720px;
+  position: absolute;
+  top: 3%;
+  left: 0;
+  
+  width: 100%;
+  height: 100%;
+}
+.head-video{
+  position: absolute;
+  bottom: 50%;
+  left: 0;
+  
+  width: 100%;
+  height: 100%;
+}
+.head-video__desktop {
+  display: block;
+}
+.head-video__mobile {
+  display: none;
 }
 
-/* Стили блока "Соберите один раз, а дальше — мы сами" */
+  /* Стили блока "Соберите один раз, а дальше — мы сами" */
 .assembly {
   margin-bottom: 250px;
 }
@@ -277,11 +393,10 @@ body{
   padding-top: 85px;
 }
 
-/* Стили блока "Узнайте, как ваш бизнес распоряжается ресурсами" */
+  /* Стили блока "Узнайте, как ваш бизнес распоряжается ресурсами" */
 .offer {
   margin-bottom: 250px;
 }
-
 .offer__h2 {
   max-width: 946px;
   margin: 0 auto 20px;
@@ -294,7 +409,6 @@ body{
   max-width: 752px;
   margin: 0 auto 30px;
 }
-
 .offer__button {
   margin: 0 auto;
   padding: 18px 28px;
@@ -305,19 +419,17 @@ body{
   font-size: 24px;
   line-height: 100%; 
 }
-
-.button-conteiner{
+.offer__button-conteiner{
   text-align: center;
 }
 
-/* Стили подвала сайта */
+  /* Стили подвала сайта */
 .footer {
   padding-top: 60px;
 
   color: var(--white, #fff);
   background-color: var(--dark-blue, #051534);
 }
-
 .footer__logo {
   display: flex;
   gap: 15px;
@@ -326,6 +438,7 @@ body{
 }
 .footer__logo-paragraph {
   width: 190px;
+  margin-right: auto;
 
   line-height: 120%; 
 }
@@ -334,52 +447,85 @@ body{
   line-height: 120%;
 }
 
-.h3{
-  font-size: 16px;
-  font-weight: 500;
+  /* Смена подвала в зависимости от разрешения экрана  */
+.footer-mobile{
+  display: none;
 }
-.h3-question{
-  padding-top: 9px;
-}
-.h3-offers{
-  padding-top: 12px;
-}
-
 .footer-navigation{
-  display: flex;
+  display: grid;
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "item1 item3 item5 item7"
+    "item2 item4 item6 item8";
 
   padding-bottom: 82px;
 
   font-size: 16px;
-  gap: 24px;
 }
-
-.footer-navigation__item{
-  width: 270px;
+#item1{
+  grid-area: item1;
 }
-
+#item2{
+  grid-area: item2;
+}
+#item3{
+  grid-area: item3;
+}
+#item4{
+  grid-area: item4;
+}
+#item5{
+  grid-area: item5;
+}
+#item6{
+  grid-area: item6;
+}
+#item7{
+  grid-area: item7;
+}
+#item8{
+  grid-area: item8;
+}
+.footer-navigation__item a:active{
+  color: var(--light-blue);
+}
 .academic-cap{
   display: inline-block;
 
   margin-bottom: -4px;
   padding-left: 4px;
 }
-
 .footer-navigation a{
   text-decoration: none;
 
   color: #8394B5;;
 }
-
 .footer-navigation li{
   margin-bottom: 15px;
 
   line-height: 120%
 }
-.footer-navigation li:last-child{
-  margin-bottom: 0px;
+
+  /* Блок ссылок на социальные сети. Общий стиль*/
+.annotation {
+  gap: 30px;
 }
 
+  /* Блок ссылок на социальные сети. Для Широкоформатных мониторов (>990px)  */
+.annotation-desktop a{
+  display: block;
+}
+
+  /* Блок ссылок на социальные сети. Для Среднеформатных мониторов (990-600px)  */
+.annotation-middle a{
+  display: none;
+
+  margin-left: auto;
+}
+
+  /* Блок денежных операций и мобильных сервисов*/
 .services {
   display: flex;
   align-items: flex-end;
@@ -387,7 +533,6 @@ body{
 
   padding: 10px 0 20px;
 }
-
 .services__flex{
   display: flex;
   gap: 20px;
@@ -395,7 +540,6 @@ body{
 .money-transfers {
   align-items: center
 }
-
 .app-stores__button {
   padding: 12px;
 
@@ -410,19 +554,475 @@ body{
   line-height: 100%; 
 }
 
+  /* Блок ссылок на социальные сети. Для Мобильных телефонов (600-375px)  */
+.annotation-mobile {
+  display: none;
+}
+.h3-question{
+  padding-top: 9px;
+}
+.h3-offers{
+  padding-top: 12px;
+}
+
+  /* Политика конфиденциальности */
 .top-line{
   padding: 22px 0;
 
   border-top: 1px solid rgba(255, 255, 255, 0.10);
 }
-
 .social-network {
   font-size: 14px;
   line-height: 120%;
 }
-
-.annotation {
-  gap: 30px;
+.social-network a{
+  color: rgba(255, 255, 255, 0.50);
 }
 
 
+
+
+/* @media (max-width: 1024px) {
+.burger {
+  display: block;
+  }
+} */
+
+
+
+@media screen and (max-width: 1200px){
+.demo {
+  display: none;
+}
+.menu__list {
+  padding-right: 10px;
+}
+.standart-module-flex {
+  display: flex;
+  gap: 40px;
+}
+.burger {
+  display: block;
+  }
+}
+
+
+
+@media screen and (max-width: 990px) { 
+  /* Стандартные стили для модулей */
+.standart-module-flex {
+  align-items: center;
+  flex-direction: column;
+
+  text-align: center;
+  gap: 40px;
+}
+.standart-module-flex img {
+  height: 100%;
+}
+.blok {
+  max-width: 708px;
+}
+
+  /* Стили шапки страницы */
+.menu {
+  padding-top: 20px;
+}
+.menu__flex{
+  gap: 30px;
+}
+.menu__list{
+  display: none;
+}
+.demo{
+  display: none;
+}
+
+  /* Стили блока "Бланс" */
+.balance{
+  margin-bottom: 190px;
+  padding-top: 120px
+}
+.h1{
+  font-size: 55px;
+}
+
+  /* изображения для широкоформатных мониторов (>990px)  */
+.desktop{
+  display: none;
+}
+
+  /* изображения для среднеформатных мониторов (990-600px) */
+.middle{
+  display: block;
+
+  margin: 0 auto;
+}
+
+  /* Стили блока Баланс — главный отчет собственника */
+.balance-determination__flex{
+  align-items: center;
+  flex-direction: column;
+
+  margin-bottom: 55px;
+  gap:45px;
+}
+.balance-determination__description {
+  max-width: 708px;
+}
+
+  /* Стили блока Получите полную картину финансов компании */
+.financial-vision {
+  margin-bottom: 92px;
+}
+
+  /* Стили блока Оперативно оценивайте здоровье бизнеса */
+.business-health {
+  margin-bottom: 150px;
+}
+
+  /* Стили блока "Построить отчет поможет мастер сборки баланса 🧙‍♂️" */
+.blok-video {
+  margin-bottom: 65px;
+}
+.blok-video__paragraph {
+  max-width: 708px;
+  margin-bottom: 45px;
+  
+}
+
+  /* Стили блока "Соберите один раз, а дальше — мы сами */
+.assembly {
+  margin-bottom: 200px;
+}
+
+  /* Стили блока Узнайте, как ваш бизнес распоряжается ресурсами */
+.offer {
+  margin-bottom: 200px;
+}
+.offer__h2 {
+  max-width: 708px;
+}
+
+  /* Стили подвала сайта */
+.footer {
+  padding: 0 30px;
+  padding-top: 60px;
+  
+}
+.footer__logo {
+  padding-bottom: 40px;
+}
+.footer-navigation{
+  justify-content: start;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "item1 item5"
+    "item2 item6"
+    "item3 item7"
+    "item4 item8";
+  column-gap: 18px;
+
+  padding-bottom: 50px;
+}
+.h3{
+  margin-top: 40px;
+}
+#item7 {
+  margin-top: -150px;
+}
+#item8 {
+  margin-top: -120px;
+}
+
+  /* Блок ссылок на социальные сети. Общие стили */
+.annotation {
+  gap: 32px;
+}
+
+  /* Блок ссылок на социальные сети. Для Широкоформатных мониторов (>990px)  */
+.annotation-desktop a{
+  display: none;
+}
+
+  /* Блок ссылок на социальные сети. Для Среднеформатных мониторов (990-600px)  */
+.annotation-middle a{
+  display: flex;
+
+  margin-left: auto;
+}
+.annotation-middle img{
+  width: 24px;
+  height: 24px;
+}
+
+  /* Блок ссылок на социальные сети. Для Мобильных телефонов (600-375px)  */
+.annotation-mobile img{
+  display: none;
+}
+.top-line {
+  padding: 24px 0;
+
+  border: none;
+}
+}
+
+
+
+@media screen and (max-width: 600px) {
+  /* Стандартные стили для модулей */
+.h2{
+  text-align: left;
+  letter-spacing: -0.15px;
+
+  font-size: 30px;
+}
+.blok {
+  text-align: left;
+
+  font-size: 18px; 
+  gap: 15px;
+}
+.standard-container {
+  padding: 0 15px;
+}
+.standart-module-flex {
+  gap: 20px;
+}
+.paragraph {
+  font-size: 18px;
+}
+.annotation {
+  display: none;
+}
+.services {
+  padding: 30px 0 ;
+}
+
+  /* Стили шапки страницы */
+.menu-logo {
+  margin:0 auto;
+}
+.menu__flex {
+  display: flex;
+  gap: 0;
+
+  margin: 0;
+}
+
+  /* Стили блока "Бланс" */
+.balance {
+  margin-bottom: 150px;
+  padding-top: 78px;
+}
+.balance__paragraph {
+  margin-bottom: 23px;
+
+  font-size: 18px
+}
+  .balance__conteiner{
+    padding: 0 15px;
+  }
+  .button-conteiner {
+    display: none;
+}
+.button__balance {
+  margin-bottom: 33px;
+  padding: 12px 20px;
+
+  font-size: 18px;
+}
+.h1 {
+  margin-bottom: 16px; 
+
+  letter-spacing: -0.4px;
+
+  font-size: 40px;
+  line-height: 115%;
+}
+
+  /* изображения для среднеформатных мониторов (990-600px) */
+.middle{
+  display: none;
+}
+  /* изображения для мобильных мониторов (600-375px) */
+.mobile{
+  display: block;
+
+  width: 345px;
+  height: 377px;
+  margin: 0 auto;
+}
+
+  /* Стили блока Баланс — главный отчет собственника */
+.balance-determination{
+  margin-bottom: 100px;
+}
+.balance-determination__description {
+  max-width: 345px;
+
+  font-size: 22px;
+}
+.balance-determination__img{
+  width: 150px;
+  height: 163px;
+}
+.balance-determination__flex{
+  margin-bottom: 10px;
+  gap: 20px;
+
+  margin-bottom: 0;
+}
+
+  /* Стили блока Получите полную картину финансов компании */
+.financial-vision__h2 {
+  padding-top: 0;
+}
+.financial-vision {
+  margin-bottom: 100px;
+}
+
+  /* Стили блока Оперативно оценивайте здоровье бизнеса */
+.business-health {
+  margin-bottom: 100px;
+}
+.business-health__h2 {
+  padding-top: 0;
+}
+
+  /* Стили блока "Построить отчет поможет мастер сборки баланса 🧙‍♂️" */
+.blok-video__paragraph {
+  margin-bottom: 20px;
+
+  text-align: left
+}
+.blok-video {
+  margin-bottom: 100px;
+}
+.head-video__desktop {
+  display: none;
+}
+.head-video__mobile {
+  display: block;
+}
+
+  /* Стили блока "Соберите один раз, а дальше — мы сами" */
+.assembly {
+  margin-bottom: 100px;
+}
+.assembly__h2 {
+  padding-top: 0;
+}
+
+  /* Стили блока "Узнайте, как ваш бизнес распоряжается ресурсами" */
+.offer {
+  margin-bottom: 100px;
+}
+.offer__h2 {
+  margin-bottom: 10px;
+
+  line-height: 120%;
+}
+.offer__paragraph {
+  margin-bottom:  20px;
+
+  text-align: left;
+}
+
+/* Блок ссылок на социальные сети. Для Мобильных телефонов (600-375px)  */
+.annotation-mobile img{
+  display: block;
+
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+.annotation-mobile{
+  display: flex;
+
+  margin-bottom: 40px;
+}
+
+/* Стили подвала сайта */
+.footer {
+  padding: 0 15px;
+  padding-top: 60px;
+}
+.footer-navigation__desktop{
+  display: none;
+}
+.money-transfers{
+  display: none;
+}
+.social-network {
+  flex-direction: column;
+}
+.top-line {
+  padding: 0;
+  padding-bottom: 25px;
+}
+
+/* Стили подвала Мобильной версии сайта */
+.footer-mobile{
+  display: block;
+}
+.accordion__control {
+  display: flex;
+  justify-content: space-between;
+
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 0;
+
+  text-align: left;
+
+  border: none;
+  background-color: transparent;
+}
+.accordion__title {
+	color: var(--white, #FFF);
+
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 120%; 
+}
+.accordion__content li {
+  padding-bottom: 15px;
+}
+.accordion__content a {
+  text-decoration: none;
+
+  color: #8394B5;
+
+  font-size: 16px;
+  line-height: 120%; 
+}
+.accordion__content {
+	display: none;
+}
+.open .accordion__content {
+	display: block;
+}
+.open .accordion__icon {
+	transform: rotate(180deg);
+}
+.accordion__control {
+	cursor: pointer;
+}
+.accordion__icon {
+	position: relative;
+  right: 0;
+
+	display: inline-block;
+
+	width: 30px;
+	height: 30px;
+}
+.accordion__icon::after {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	content: "";
+}
+}
